@@ -14,6 +14,7 @@
   * XML::NodeSet is now always decorated (if the document has decorators). GH #198
   * XML::NodeSet#slice gracefully handles offset+length larger than the set length. GH #200
   * XML::Node#content= safely unlinks previous content. GH #203
+  * XML::Node#namespace= takes nil as a parameter
 
 === 1.4.1 / 2009/12/10
 
